# ratatui-3dmesh

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.codebase-memory/: artifact.json  graph.db.zst
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.mimir/plans/: 2026-06-23t23-14-30-372z-98316513-e216-4f42-b196-7fd723180fdb-add-animation-support.md  2026-06-23t23-14-30-372z-98316513-e216-4f42-b196-7fd723180fdb-ratatui-3dmesh-plugin.md  2026-06-24t14-57-27-016z-786c3776-3807-4500-82fe-4bcafc1a54e3-harden-gltf-obj-rendering.md
docs/wiki/: Configuration.md  Embedding-in-Ratatui.md  Getting-Started.md  Home.md  Model-Formats.md  Roadmap.md  _Sidebar.md
docs/wiki/media/: ratatui-3dmesh-viewer-fox.webm
examples/: viewer.rs
examples/assets/: pyramid.mtl  tetra.stl
examples/assets/gltf/: LICENSE.md
scripts/: fetch-gltf-corpus.sh  publish-wiki.sh
src/: animation.rs  config.rs  controls.rs  error.rs  lib.rs  model.rs  widget.rs
src/loader/: gltf.rs  mod.rs  mtl.rs  obj.rs  stl.rs  texture.rs
src/render/: camera.rs  color.rs  mod.rs  pipeline.rs  raster.rs
tests/: example_models.rs  gltf_corpus.rs
