[package]
name = "ratatui-3dmesh"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "A reusable Ratatui widget for rendering OBJ/glTF/GLB 3D meshes as shaded terminal ASCII."
license = "MIT"
readme = "README.md"
repository = "https://github.com/vynxc/ratatui-3dmesh"
homepage = "https://github.com/vynxc/ratatui-3dmesh"
keywords = ["ratatui", "tui", "3d", "ascii", "widget"]
categories = ["command-line-interface", "rendering", "visualization"]

# Keep the published crate lean and reproducible: local-only model dumps, planning
# notes, and the code-memory index are never part of a release.
exclude = [
    "models/",
    ".mimir/",
    ".codebase-memory/",
    ".github/",
]

[features]
default = ["obj", "mtl", "gltf", "textures"]
obj = []
mtl = []
gltf = ["dep:gltf"]
textures = ["dep:image"]
serde = ["dep:serde"]
cli-example = ["dep:crossterm"]

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["serde"] }
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"], optional = true }
gltf = { version = "1", optional = true, features = [
    # Pure-JSON Khronos extensions: enabling these costs no extra binary size
    # (no decoder crates) but lets the importer accept any model that lists one
    # as `extensionsRequired`, instead of hard-failing validation. Geometry
    # compression (Draco, meshopt) and GPU texture formats (KTX2/basisu) are
    # intentionally omitted: the crate cannot decode them and they would pull in
    # heavy dependencies.
    "KHR_lights_punctual",
    "KHR_materials_emissive_strength",
    "KHR_materials_ior",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_specular",
    "KHR_materials_transmission",
    "KHR_materials_unlit",
    "KHR_materials_variants",
    "KHR_materials_volume",
    "KHR_texture_transform",
] }

crossterm = { version = "0.29", optional = true }

[dev-dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }

[[example]]
name = "viewer"
required-features = ["cli-example"]
